--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,8 @@ ul {
 .header-container {
   border-bottom: 1px solid #e7e9fc;
   margin: 24px 0;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-wrap {
   display: flex;
