--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,9 @@ body {
   border: none;
   border-radius: 4px;
 }
-.button:hover {
-  background-color: #404bbf;
-}
-
-.button:focus {
+.button:hover 
+.button:focus
+.button:active {
   background-color: #404bbf;
 }
 .link {
@@ -113,6 +111,9 @@ body {
   text-decoration: none;
   list-style-type: none;
   padding: 24px 0;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .link-addres {
   color: #434455;
@@ -259,4 +260,15 @@ ul {
   padding: 32px 16px 32px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+.now{::after {
+	content: "";
+	background-color: #404bbf;
+	width: 100%;
+	height: 4px;
+	border-radius: 2px;
+	position: absolute;
+	left: 0;
+	bottom: -1px;
+
 }
