--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ body {
 }
 .address {
   font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .sekcja {
   background-color: #2e2f42;
@@ -97,9 +98,7 @@ body {
   border: none;
   border-radius: 4px;
 }
-.button:hover 
-.button:focus
-.button:active {
+.button:hover .button:focus .button:active {
   background-color: #404bbf;
 }
 .link {
@@ -113,21 +112,18 @@ body {
   padding: 24px 0;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
+
 .link-addres {
   color: #434455;
+  font-size: 16px;
+  font-style: normal;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link:hover {
-  color: #404bbf;
-}
-.link:focus {
-  color: #404bbf;
-}
-.link-addres:hover {
-  color: #404bbf;
-}
+.link:hover,
+.link:focus,
+.link-addres:hover,
 .link-addres:focus {
   color: #404bbf;
 }
@@ -210,6 +206,7 @@ ul {
 .ul-list {
   display: flex;
   gap: 40px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ul-list-dwa {
   display: flex;
@@ -261,14 +258,13 @@ ul {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-.now{::after {
-	content: "";
-	background-color: #404bbf;
-	width: 100%;
-	height: 4px;
-	border-radius: 2px;
-	position: absolute;
-	left: 0;
-	bottom: -1px;
-
+.now::after {
+  content: "";
+  background-color: #404bbf;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
 }
