--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,10 @@ ul {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
+.now {
+  position: relative;
+  color: #404bbf;
+}
 .now::after {
   content: "";
   background-color: #404bbf;
