--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,16 @@ body {
 }
 .sekcja {
   background-color: #2e2f42;
+  letter-spacing: 0.02em;
   padding: 188px 0;
   background-image: linear-gradient(
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)
-  );
-  max-width: 1440px;
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/office.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  max-width: 1440px;
   background-size: cover;
 }
 .sekcja-dwa {
