--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,9 @@ ul {
   width: calc((100% - 3 * 24px) / 4);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  text-align: center;
 
   gap: 40px;
 }
@@ -267,7 +270,10 @@ ul {
   overflow: hidden;
 }
 .personal {
+  margin: 0;
   padding: 32px 0px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .appi {
@@ -290,20 +296,20 @@ ul {
   bottom: -1px;
 }
 .icon-box {
-	background: #f4f4fd;
-	border: 1px solid #8e8f99;
-	border-radius: 4px;
-	width: 264px;
-	height: 112px;
-	margin-bottom: 8px;
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  background: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  margin-bottom: 8px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .icon use {
-	z-index: 999;
-	position: absolute;
-	top: 24px;
-	left: 100px;
+  z-index: 999;
+  position: absolute;
+  top: 24px;
+  left: 100px;
 }
