--- a/css/style.css
+++ b/css/style.css
@@ -313,3 +313,30 @@ ul {
   top: 24px;
   left: 100px;
 }
+.member-socials {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin: 9px 16px 0px 16px;
+}
+.member-socials-list-element {
+  width: 40px;
+  height: 40px;
+}
+.member-socials-link {
+  width: 100%;
+  height: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.member-socials-link:hover,
+.member-socials-link:focus {
+  background-color: #404bbf;
+}
+.member-socials-link-icon {
+  fill: #f4f4fd;
+}
