--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,7 @@ ul {
   justify-content: center;
   gap: 24px;
   margin: 9px 16px 0px 16px;
+  width: 40px;
 }
 .member-socials-list-element {
   width: 40px;
