--- a/css/style.css
+++ b/css/style.css
@@ -215,11 +215,16 @@ ul {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   text-align: center;
-
   gap: 40px;
 }
 .li-trzy {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.li-trzy:hover,
+.li-trzy:focus {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .ul-list {
@@ -340,4 +345,25 @@ ul {
 }
 .member-socials-link-icon {
   fill: #f4f4fd;
+}
+.section-image{
+  position: relative;
+overflow: hidden;}
+.section-image-overlay{position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform: translateY(100%);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	background-color: #4d5ae5;
+	color: #f4f4fd;
+	padding: 40px 32px;
+	font-family: Roboto;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 24px;
+	letter-spacing: 0.02em;
+	text-align: left;
+
 }
