--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,6 @@ img {
 }
 
 .header-dwa {
-  font-size: 36px;
-  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -244,8 +242,6 @@ ul {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  margin: 0;
-  padding: 0;
 }
 .ul-list:last-child {
   margin-right: 0;
@@ -368,4 +364,9 @@ ul {
   line-height: 24px;
   letter-spacing: 0.02em;
   text-align: left;
+}
+.li-trzy:hover .section-image-overlay {
+  transform: translateY(0);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
