--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ body {
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
+  height: 312px;
 }
 .pepa {
   color: #f4f4fd;
@@ -255,7 +256,7 @@ ul {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   margin-right: 76px;
-  display: inline-block;
+  display: flex;
   margin-bottom: 16px;
 }
 .visually-hidden {
@@ -369,4 +370,8 @@ ul {
   transform: translateY(0);
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.footer-info {
+  display: flex;
+  align-items: baseline;
 }
