--- a/css/style.css
+++ b/css/style.css
@@ -394,3 +394,31 @@ ul {
 .footer-info-left {
   margin-right: 120px;
 }
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-social-list-el {
+  width: 40px;
+  height: 40px;
+}
+.footer-social-link {
+  width: 100%;
+  height: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #31d0aa;
+}
+
+.footer-social-link-icon {
+  fill: #f4f4fd;
+  width: 24px;
+  height: 24px;
+}
