--- a/css/style.css
+++ b/css/style.css
@@ -22,21 +22,23 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  
 }
 .pee {
   font-size: 16px;
-  line-height: ;
+  line-height: 24px;
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
 }
 
 .header-dwa {
-  text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
   color: #2e2f42;
+  margin: 0 auto;
   margin-bottom: 72px;
+  padding: 0 auto;
+  text-align: center;
+  text-transform: capitalize;
 }
 .logo {
   font-weight: 700;
@@ -207,7 +209,7 @@ ul {
 }
 .li-dwa {
   border-radius: 0px 0px 4px 4px;
-  background-color: #ffffff;
+  background-color: #fff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   text-align: center;
