--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,8 @@ ul {
   margin-bottom: 16px;
   display: flex;
 }
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, ul {
   margin: 0;
+  padding: 0;
+  
 }
